@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
 	<string id="30000">Kvalita</string>
-	<string id="30001">Formát</string>
 	<string id="30002">Server je nedostupný!</string>
-	<string id="30003">Načítam...</string>
-	<string id="30004">Otváram video...</string>
 	<string id="30005">Verzie videa nenájdené!</string>
 	<string id="30006">Ďalšie</string>
-  <string id="30007">FireTV hack</string>
 </strings>
