@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-    <setting id="quality" type="labelenum" label="30000" values="180p|360p|480p|720p|1080p" default="" />
-    <setting type="sep"/>
-    <setting id="firetvhack" type="bool" label="30007" default="false"/>
+    <setting id="quality" type="labelenum" label="30000" values="180p|360p|480p|720p|1080p" default="1080p" />
 </settings>
